ajout des dernière modifs images, css et html et des photos

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gastronomie</title>
+    <title>Loisirs</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -29,22 +29,102 @@
     </header>
 
     <!--Article mis en avant 1 -->
-    <h2>Gastronomie</h2>
+    <h2 class="h2sportetFS">Sport</h2>
     <div class="featured-article">
         <article id="featured-article">
-            <img id="featured-image" src="./assets/La volière gourmande.webp" alt="Image de l'article">
+            <img id="featured-image" src="./assets/chicken swing.png" alt="Image de l'article">
             <div>
-                <h2>La Volière Gourmande</h2>
-                <p>Un lieu où chaque plat est une envolée de saveurs, inspirée par nos amis à plumes.
+                <h2>Chicken Ball à Wild City</h2>
+                <p>Il y a longtemps, dans la ville sauvage de Wild City, un poulet audacieux nommé Pluméco rêvait de
+                    créer
+                    un
+                    sport qui refléterait l'esprit aventureux et dynamique des habitants. Après avoir observé ses amis
+                    jouer
+                    à
+                    un jeu de lancer, Pluméco eut une idée : utiliser une balle en forme de poulet pour un sport qui
+                    mêlerait
+                    sauts, courses et acrobaties. Il appela ce jeu le Chicken Ball.
 
-                    Spécialité :
-                    Poulet Rôti à l’ herbe de ProvenceUn poulet parfaitement rôti, tendre et parfumé, accompagné d'un
-                    mélange d'herbes fraîches et d'une sauce maison.Un lieu où chaque plat est une envolée de saveurs,
-                    inspirée par nos amis à plumes.Spécialité :
-                    Un lieu où chaque plat est une envolée de saveurs,
+                    Rapidement, ce sport devint un phénomène à Wild City, rassemblant les poulets dans des compétitions
+                    effervescentes où agilité et stratégie étaient clés. Aujourd'hui, le Chicken Ball est devenu le
+                    sport
+                    emblématique de la ville, pratiqué par tous, jeunes et vieux, dans les rues et arènes locales,
+                    célébrant
+                    l'esprit libre et sauvage de Wild City.
                 </p>
-                <button class="B1">En savoir +</button>
-                <button class="B2">Catégories</button>
+                <button class="B2">En savoir +</button>
+
+            </div>
+
+        </article>
+    </div>
+
+    <!-- Section 2 : Carrousel des autres articles -->
+    <div class="carrousel-container">
+        <div class="test1"><button class="prev" aria-label="Précédent">&lt;</button></div>
+
+        <!-- Carrousel -->
+        <div class="carrousel">
+            <div class="carrousel-item" data-article="1">
+                <article>
+                    <div class="jsp">
+                        <img src="./assets/chicken swing.png" alt="Image de l'Article 1">
+                    </div>
+                    <h2>CHICKEN SWING</h2>
+                    <span>En savoir +</span>
+                    <p>Il y a longtemps, dans la ville sauvage de Wild City, un poulet audacieux nommé Pluméco rêvait de
+                        créer un sport qui refléterait l'esprit aventureux et dynamique des habitants. Après avoir
+                        observé ses amis jouer à un jeu de lancer, Pluméco eut une idée : utiliser une balle en forme de
+                        poulet pour un sport qui mêlerait sauts, courses et acrobaties. Il appela ce jeu le Chicken
+                        Ball.
+                    </p>
+                </article>
+            </div>
+            <div class="carrousel-item" data-article="2">
+                <article>
+
+                    <img src="poulepong.png" alt="Image de l'Article 2">
+                    <h2>POULE PONG</h2>
+                    <span>En savoir +</span>
+                    <p>Il y a longtemps, dans la ville sauvage de Wild City, un poulet audacieux nommé Pluméco rêvait de
+                        créer un sport qui refléterait l'esprit aventureux et dynamique des habitants. Après avoir
+                        observé ses amis jouer à un jeu de lancer, Pluméco eut une idée : utiliser une balle en forme de
+                        poulet pour un sport qui mêlerait sauts, courses et acrobaties. Il appela ce jeu le Chicken
+                        Ball.</p>
+                </article>
+            </div>
+            <div class="carrousel-item" data-article="3">
+                <article>
+
+                    <img src="./assets/chicken ball.jpg" alt="Image de l'Article 2">
+                    <h2>Chicken Ball </h2>
+                    <span>E, savoir +</span>
+                    <p>Il y a longtemps, dans la ville sauvage de Wild City, un poulet audacieux nommé Pluméco rêvait de
+                        créer un sport qui refléterait l'esprit aventureux et dynamique des habitants. Après avoir
+                        observé ses amis jouer à un jeu de lancer, Pluméco eut une idée : utiliser une balle en forme de
+                        poulet pour un sport qui mêlerait sauts, courses et acrobaties. Il appela ce jeu le Chicken
+                        Ball.</p>
+                </article>
+            </div>
+        </div>
+
+        <div class="test2"><button class="next" aria-label="Suivant">&gt;</button></div>
+    </div>
+    <!-- Deuxieme partie du site -->
+    <h2 class="h2sportetFS">Foires et Salons</h2>
+    <div class="featured-article">
+        <article id="featured-article">
+            <img id="featured-image" src="./assets/Salon de l'humain.jpg" alt="Image de l'article">
+            <div>
+                <h2>Salon de l'Humain</h2>
+                <p>Cette métropole dynamique et innovante où les poules ont pris les rênes de la gouvernance,
+                    poursuit son objectif de fusionner nature, technologie et culture. Au cœur de cette ville à
+                    l'atmosphère unique, un événement majeur attire l'attention des citoyens et visiteurs : le Salon de
+                    l'Humain. Organisé chaque année par la municipalité de WildCity, dirigée par la charismatique poule
+                    Cluckus Maximus, cet événement est l'occasion pour la ville de se recentrer sur l’humain, ses
+                    besoins, ses défis et ses aspirations dans un monde en constante évolution.
+                </p>
+                <button class="B2">En savoir +</button>
 
             </div>
 
@@ -60,112 +140,52 @@
             <div class="carrousel-item" data-article="1">
                 <article>
 
-                    <img src="assets/Le Coq et la table.webp" alt="Image de l'Article 1">
-                    <h2>Le Coq et la table</h2>
+                    <img src="assets/Fete graine d'avenir.jpg" alt="Image de l'Article 1">
+                    <h2>La Fête des Graines d'Avenir</h2>
                     <span>En savoir +</span>
-                    <p>Ici, les poules servent un festin royal sous l’œil attentif du fier coq.
-
-                        Spécialité :
-                        Coq au VinUn coq mijoté lentement dans un vin rouge savoureux, accompagné de champignons, de
-                        lardons et d'une purée maison onctueuse.Ici, les poules servent un festin royal sous l’œil
-                        attentif du fier coq.
+                    <p>Un événement axé sur l'agriculture durable, la nature, et les pratiques respectueuses de
+                        l'environnement. Les citoyens de WildCity, dirigés par leurs poules gouvernantes, organisent
+                        cette foire pour promouvoir les initiatives écologiques, l'agriculture urbaine, ainsi que les
+                        produits locaux et bio. C'est aussi un lieu où les habitants peuvent échanger sur les solutions
+                        futures pour un monde plus vert et plus équitable.
                     </p>
                 </article>
             </div>
             <div class="carrousel-item" data-article="2">
                 <article>
 
-                    <img src="assets/Les Poules en fête.webp" alt="Image de l'Article 2">
-                    <h2>Les Poules en fête</h2>
+                    <img src="assets/Les jardins.jpg" alt="Image de l'Article 2">
+                    <h2>Les Jardins</h2>
                     <span>En savoir +</span>
-                    <p>Un restaurant où l’ambiance est festive et les poules chantent pour un repas savoureux.
-
-                        Spécialité :
-                        Soupe de Poulet aux Légumes du MarchéUne soupe réconfortante à base de poulet fermier, de
-                        légumes de saison et d'herbes fraîches, idéale pour un repas convivial.</p>
+                    <p>Un événement qui se concentre sur le futur de l'urbanisme, du développement durable et de
+                        l'architecture verte. À WildCity, cet événement invite les citoyens et les visiteurs à imaginer
+                        et construire ensemble la ville de demain, tout en mettant l'accent sur l'intégration de la
+                        nature dans le quotidien urbain. Des jardins communautaires, des espaces verts et des projets
+                        écologiques innovants seront au centre de cette foire, où l'on pourra aussi participer à des
+                        ateliers de jardinage urbain, de permaculture, ou de design d'espaces verts.</p>
                 </article>
             </div>
             <div class="carrousel-item" data-article="3">
                 <article>
 
-                    <img src="assets/La volière gourmande.webp" alt="Image de l'Article 2">
-                    <h2>La Volière Gourmande</h2>
+                    <img src="assets/Salon de l'humain.jpg" alt="Image de l'Article 2">
+                    <h2>Salon de l'Humain</h2>
                     <span>En savoir +</span>
-                    <p>Un lieu où chaque plat est une envolée de saveurs, inspirée par nos amis à plumes.
-
-                        Spécialité :
-                        Poulet Rôti à l’ herbe de ProvenceUn poulet parfaitement rôti, tendre et parfumé, accompagné
-                        d'un
-                        mélange d'herbes fraîches et d'une sauce maison.</p>
+                    <p>Cette métropole dynamique et innovante où les poules ont pris les rênes de la gouvernance,
+                        poursuit son objectif de fusionner nature, technologie et culture. Au cœur de cette ville à
+                        l'atmosphère unique, un événement majeur attire l'attention des citoyens et visiteurs : le Salon
+                        de
+                        l'Humain. Organisé chaque année par la municipalité de WildCity, dirigée par la charismatique
+                        poule
+                        Cluckus Maximus, cet événement est l'occasion pour la ville de se recentrer sur l’humain, ses
+                        besoins, ses défis et ses aspirations dans un monde en constante évolution.</p>
                 </article>
             </div>
         </div>
 
         <div class="test2"><button class="next" aria-label="Suivant">&gt;</button></div>
     </div>
-    <!-- Deuxieme partie du site -->
-    <!-- Thommas -->
 
-    <section class="bars">
-        <h2>Bars</h2>
-        <div class="div6">
-            <article class="mise_en_avant">
-                <img class="img_bar" src="/assets/le perchoir du coq.png" alt="vue du bar: le perchoir du coq">
-                <div class="div1">
-                    <h3>Le Perchoir du Coq</h3>
-                    <p>Un bar perché où l’on savoure des cocktails avec vue sur la ville et une ambiance animée.</p>
-                    <p> Spécialité:</p>
-                    <p>Coup de Sanguine:</p>
-                    <p>Un cocktail audacieux à base de rhum, d’orange sanguine et de sirop de gingembre, servi dans
-                        un verre original.</p>
-                </div>
-            </article>
-        </div>
-
-        <div class="div4">
-            <article class="roti">
-                <img class="img_bar2" src="/assets/l'oeuf roti bar.png" alt="vue du restaurants les poules en fête">
-                <div class="div2">
-                    <h3>L'Œuf Roti Bar</h3>
-                    <p>Le lieu idéal pour déguster des cocktails uniques dans une ambiance décontractée et
-                        conviviale.
-                    </p>
-                    <p> Spécialité:</p>
-                    <p>Citrus Velvet</p>
-                    <p>Un cocktail à base de whisky, blanc d'œuf et citron, crémeux et légèrement acidulé pour une
-                        dégustation unique.</p>
-                </div>
-            </article>
-
-            <article class="caille">
-                <img class="img_bar2" src="/assets/la caille et le barman.png"
-                    alt="vue du restaurant le coq et la table">
-                <div class="div3">
-                    <h3>La Caille & le Barman</h3>
-                    <p>Ici, les soirées sont chaleureuses, les conversations rient comme des cailles et les verres
-                        s'entrechoquent.</p>
-                    <p>Spécialité:</p>
-                    <p>Berry Twist</p>
-                    <p>Un gin tonic revisité avec une touche de liqueur de baies et de zestes d’agrumes, pour une
-                        touche
-                        fraîche.</p>
-                </div>
-            </article>
-            <article class="perchoir">
-                <img class="img_bar2" src="/assets/le perchoir du coq.png" alt="vue du bar: le perchoir du coq">
-                <div class="div5">
-                    <h3>Le Perchoir du Coq</h3>
-                    <p>Un bar perché où l’on savoure des cocktails avec vue sur la ville et une ambiance animée.</p>
-                    <p> Spécialité:</p>
-                    <p>Coup de Sanguine</p>
-                    <p>Un cocktail audacieux à base de rhum, d’orange sanguine et de sirop de gingembre, servi dans
-                        un
-                        verre original.</p>
-                </div>
-            </article>
-        </div>
-
-    </section>
 
 
     <script src="main.js"></script>
