--- a/gastronomie/gastronomie.html
+++ b/gastronomie/gastronomie.html
@@ -16,11 +16,11 @@
             <nav>
                 <p><a href="index.html"></a></p>
                 <ul>
-                    <li><a href="index.html" class="default">🏠</a></li>
+                    <li><a href="/index.html" class="default">🏠</a></li>
                     <li><a href="gastronomie.html">Gastronomie</a></li>
                     <li><a href="">Loisirs</a></li>
-                    <li><a href="cultures.html">Cultures</a></li>
-                    <li><a href="news.html">News</a></li>
+                    <li><a href="/cultures.html">Cultures</a></li>
+                    <li><a href="/news.html">News</a></li>
                     <!-- <li><a href="" class="search-icon-i">🏠</a></li> -->
                 </ul>
                 <div class="search-container">
