ajout du js pour carroussel restaurants et bars

--- a/gastronomie/gastronomie.html
+++ b/gastronomie/gastronomie.html
@@ -108,7 +108,7 @@
         <h2> Bars:</h2>
         <section class="bars">
             <div class="div6">
-                <article class="mise_en_avant">
+                <article class="mise_en_avant2">
                     <img class="img_bar" src="/assets/le perchoir du coq.png" alt="vue du bar: le perchoir du coq">
                     <div class="div1">
                         <h3>Le Perchoir du Coq</h3>
@@ -178,6 +178,7 @@
             </div>
 
         </section>
+        <script src="gastronomie.js" defer></script>
     </main>
 </body>
 
