ajout du menu burger

--- a/cultures.html
+++ b/cultures.html
@@ -11,16 +11,19 @@
     <header>
         <div class="test"></div>
         <div class="navigation">
+            <img src="./images/menu.png" alt="menu burger" class="burger-menu">
             <nav>
                 <p><a href="index.html"></a></p>
-                <ul>
-                    <li><a href="index.html" class="default">🏠</a></li>
-                    <li><a href="Gastronomie.html">Gastronomie</a></li>
-                    <li><a href="Loisirs.html">Loisirs</a></li>
-                    <li><a href="./cultures.html">Cultures</a></li>
-                    <li><a href="./news.html">News</a></li>
-                        <!-- <li><a href="" class="search-icon-i">🏠</a></li> -->
-                </ul>
+                <div class="nav-links">
+                    <ul>
+                        <li><a href="index.html" class="default">🏠</a></li>
+                        <li><a href="Gastronomie.html">Gastronomie</a></li>
+                        <li><a href="Loisirs.html">Loisirs</a></li>
+                        <li><a href="./cultures.html">Cultures</a></li>
+                        <li><a href="./news.html">News</a></li>
+                            <!-- <li><a href="" class="search-icon-i">🏠</a></li> -->
+                    </ul>
+                </div>
                 <div class="search-container">
                     <input type="search" class="search-bar" placeholder="Rechercher..." />
                     <span class="search-icon">&#128269;</span>
@@ -119,4 +122,4 @@
     </main> 
     <script src="culture.js" defer></script>
 </body>
-</html>
+</html
