toutes les pages annexes sont faite et toutes reliées au JS oeuf

--- a/gastronomie/gastronomie.html
+++ b/gastronomie/gastronomie.html
@@ -38,13 +38,13 @@
                     <img class="img_restaurant" src="/assets/La_voliere_gourmande.png" alt="la La_voliere_gourmande">
                     <div class="div8">
                         <h3>La Volière Gourmande</h3>
-                        <p>Ici, les poules servent un festin royal sous l’œil attentif du fier coq.</p>
+                        <p>Un lieu où chaque plat est une envolée de saveurs, inspirée par nos amis à plumes.</p>
                         <p> Spécialité:</p>
                         <p>Poulet Rôti à l’ herbe de Provence:</p>
                         <p>Un poulet parfaitement rôti, tendre et parfumé, accompagné d'un mélange d'herbes fraîches et
                             d'une sauce maison.Un lieu où chaque plat est une envolée de
                             saveurs, inspirée par nos amis à plumes.</p>
-                        <a href="./perchoir du coq.html">
+                        <a href="./la voliere gourmande.html">
                             <button>En savoir plus</button>
                         </a>
                     </div>
@@ -57,12 +57,12 @@
                         alt="vue du restaurant le coq & la table">
                     <div class="div2">
                         <h3>Le Coq & la Table</h3>
-                        <a href="./l'oeuf roti bar.html">
+                        <a href="./le coq & la table.html">
                             <button>En savoir plus</button>
                         </a>
                         <p>Ici, les poules servent un festin royal sous l’œil attentif du fier coq.</p>
                         <p> Spécialité:</p>
-                        <p>Coq au VinUn coq</p>
+                        <p>Coq au Vin:</p>
                         <p>mijoté lentement dans un vin rouge savoureux, accompagné de
                             champignons, de
                             lardons et d'une purée maison onctueuse.Ici, les poules servent un festin royal sous
@@ -76,7 +76,7 @@
                         alt="vue du restaurant: les poules en fete">
                     <div class="div5">
                         <h3>Les Poules en Fete</h3>
-                        <a href="./perchoir du coq.html">
+                        <a href="./les poules en fete.html">
                             <button>En savoir plus</button>
                         </a>
                         <p>Un restaurant où l’ambiance est festive et les poules chantent pour un repas savoureux.</p>
@@ -92,7 +92,7 @@
                         alt="vue du restaurant: la La_voliere_gourmande">
                     <div class="div5">
                         <h3>La Volière Gourmande</h3>
-                        <a href="./perchoir du coq.html">
+                        <a href="./la voliere gourmande.html">
                             <button>En savoir plus</button>
                         </a>
                         <p>Un lieu où chaque plat est une envolée de saveurs, inspirée par nos amis à plumes.</p>
@@ -127,7 +127,7 @@
 
             <div class="div4">
                 <article class="roti">
-                    <img class="img_bar2" src="/assets/l'oeuf roti bar.png" alt="vue du bar l'oeuf roti">
+                    <img class="img_bar2" src="/assets/oeuf roti bar.png" alt="vue du bar l'oeuf roti">
                     <div class="div2">
                         <h3>L'Œuf Roti Bar</h3>
                         <a href="./l'oeuf roti bar.html">
