--- a/gastronomie/perchoir du coq.html
+++ b/gastronomie/perchoir du coq.html
@@ -9,6 +9,24 @@
 </head>
 
 <body>
+    <header>
+        <div class="test"></div>
+        <nav>
+            <p><a href="index.html"></a></p>
+            <ul>
+                <li><a href="/index.html" class="default">🏠</a></li>
+                <li><a href="gastronomie.html">Gastronomie</a></li>
+                <li><a href="">Loisirs</a></li>
+                <li><a href="/cultures.html">Cultures</a></li>
+                <li><a href="/news.html">News</a></li>
+                <!-- <li><a href="" class="search-icon-i">🏠</a></li> -->
+            </ul>
+            <div class="search-container">
+                <input type="search" class="search-bar" placeholder="Rechercher..." />
+                <span class="search-icon">&#128269;</span>
+            </div>
+        </nav>
+    </header>
     <main>
         <article>
             <h1> Le "Perchoir du coq"</h1>
@@ -65,6 +83,7 @@
         </article>
 
     </main>
+    <script src="oeuf.js"></script>
 </body>
 
 </html>
