--- a/cultures.html
+++ b/cultures.html
@@ -9,13 +9,31 @@
 </head>
 <body>
     <header>
+        <div class="test"></div>
         <div class="navigation">
-            <nav class="navbar">
-                
+            <nav>
+                <p><a href="index.html"></a></p>
+                <ul>
+                    <li><a href="index.html" class="default">🏠</a></li>
+                    <li><a href="Gastronomie.html">Gastronomie</a></li>
+                    <li><a href="Loisirs.html">Loisirs</a></li>
+                    <li><a href="./cultures.html">Cultures</a></li>
+                    <li><a href="./news.html">News</a></li>
+                        <!-- <li><a href="" class="search-icon-i">🏠</a></li> -->
+                </ul>
+                <div class="search-container">
+                    <input type="search" class="search-bar" placeholder="Rechercher..." />
+                    <span class="search-icon">&#128269;</span>
+                </div>
             </nav>
         </div>
         <div class="background">
             <h1>Espace culture</h1>
+        </div>
+        <div id="countdown-container">
+            <h2>Événement à venir</h2>
+            <p>Il reste :</p>
+            <div id="countdown"></div>
         </div>
     </header>   
     <main>
