--- a/gastronomie/l'oeuf roti bar.html
+++ b/gastronomie/l'oeuf roti bar.html
@@ -9,6 +9,22 @@
 </head>
 
 <body>
+    <header>
+        <div class="test"></div>
+        <nav>
+            <ul>
+                <li><a href="/index.html" class="default">🏠</a></li>
+                <li><a href="/gastronomie/gastronomie.html">Gastronomie</a></li>
+                <li><a href="">Loisirs</a></li>
+                <li><a href="/cultures.html">Cultures</a></li>
+                <li><a href="/news.html">News</a></li>
+            </ul>
+            <div class="search-container">
+                <input type="search" class="search-bar" placeholder="Rechercher..." />
+                <span class="search-icon" onclick="toggleSearchBar()">&#128269;</span>
+            </div>
+        </nav>
+    </header>
     <main>
         <article>
             <h1> L'Oeuf Roti Bar</h1>
@@ -64,6 +80,7 @@
         </article>
 
     </main>
+    <script src="oeuf.js"></script>
 </body>
 
 </html>
