--- a/gastronomie/les poules en fete.html
+++ b/gastronomie/les poules en fete.html
@@ -15,7 +15,7 @@
             <p><a href="index.html"></a></p>
             <ul>
                 <li><a href="/index.html" class="default">🏠</a></li>
-                <li><a href="gastronomie.html">Gastronomie</a></li>
+                <li><a href="/gastronomie/gastronomie.html">Gastronomie</a></li>
                 <li><a href="">Loisirs</a></li>
                 <li><a href="/cultures.html">Cultures</a></li>
                 <li><a href="/news.html">News</a></li>
