rajout du footer sur toutes les pages

--- a/gastronomie/gastronomie.html
+++ b/gastronomie/gastronomie.html
@@ -123,7 +123,7 @@
 
             <div class="div4">
                 <article class="roti">
-                    <img class="img_bar2" src="/assets/l'oeuf roti bar.png" alt="vue du bar l'oeuf roti">
+                    <img class="img_bar2" src="/assets/oeuf roti bar.png" alt="vue du bar l'oeuf roti">
                     <div class="div2">
                         <h3>L'Œuf Roti Bar</h3>
                         <a href="./l'oeuf roti bar.html">
@@ -176,6 +176,11 @@
         </section>
         <script src="gastronomie.js" defer></script>
     </main>
+    <footer>
+        <p>Site conçu par les devs Poulet of WildCity</p>
+        <p>Projet 1</p>
+        <p>A la sueur des pattes</p>
+    </footer>
 </body>
 
 </html>
