--- a/gastronomie/les poules en fete.html
+++ b/gastronomie/les poules en fete.html
@@ -89,6 +89,13 @@
         </article>
 
     </main>
+
+    <footer>
+        <p>Site conçu par les devs Poulet of WildCity</p>
+        <p>Projet 1</p>
+        <p>A la sueur des pattes</p>
+    </footer>
+
     <script src="oeuf.js"></script>
 </body>
 
