rajout du p que j'ai oublié

--- a/gastronomie/perchoir du coq.html
+++ b/gastronomie/perchoir du coq.html
@@ -74,9 +74,9 @@
                 mesure.
             </p>
             <!-- mettre en bold -->
-            <p>Découvrez nos offres spéciales de la semaine et nos événements en soirée pour un moment inoubliable
-                au
-                Perchoir du Coq.</p>
+            <p>Découvrez nos offres spéciales de la semaine et nos événements en soirée pour un moment inoubliable</p>
+            au
+            Perchoir du Coq.</p>
             <a href="./gastronomie.html">
                 <button>Retour à la page gastronomie</button>
             </a>
