ajout du footer et element js pour une animation de la nav-bar

--- a/cultures.html
+++ b/cultures.html
@@ -136,19 +136,11 @@
         </article>
     </main>
     <footer>
-        <div class="footer-container">
-            <!-- Section 1 : Informations générales -->
-            <div class="footer-info">
-                <img src="logo.png" alt="Logo Wild City" class="footer-logo">
-                <p>Wild City, la ville où les poules dansent et chantent ! 🐔✨</p>
-            </div>
+        <p>Wild City, la ville où les poules dansent et chantent ! 🐔✨</p>
 
-            <!-- Section 4 : Mentions légales -->
-            <div class="footer-legal">
-                <p>&copy; 2024 Wild City. Tous droits réservés.</p>
-                <a href="#">Mentions légales</a> | <a href="#">CGU</a>
-            </div>
-        </div>
+        <p>&copy; 2024 Wild City. Tous droits réservés.
+        </p>
+        
     </footer>
     <script src="culture.js" defer></script>
 </body>
