responsive navbar ok, ajout du footer ok, manque que les liens de loisirs

--- a/gastronomie/l'oeuf roti bar.html
+++ b/gastronomie/l'oeuf roti bar.html
@@ -81,9 +81,12 @@
 
     </main>
     <footer>
-        <p>Site conçu par les devs Poulet of WildCity</p>
-        <p>Projet 1</p>
-        <p>A la sueur des pattes</p>
+        <p>Wild City, la ville où les poules dansent et chantent ! 🐔✨</p>
+
+        <p>&copy; 2024 Wild City. Tous droits réservés.
+            <a href="#">Mentions légales</a> | <a href="#">CGU</a>
+        </p>
+
     </footer>
     <script src="oeuf.js"></script>
 </body>
