--- a/gastronomie/perchoir du coq.html
+++ b/gastronomie/perchoir du coq.html
@@ -74,9 +74,8 @@
                 mesure.
             </p>
             <!-- mettre en bold -->
-            <p>Découvrez nos offres spéciales de la semaine et nos événements en soirée pour un moment inoubliable</p>
-            au
-            Perchoir du Coq.</p>
+            <p>Découvrez nos offres spéciales de la semaine et nos événements en soirée pour un moment inoubliable au
+                Perchoir du Coq.</p>
             <a href="./gastronomie.html">
                 <button>Retour à la page gastronomie</button>
             </a>
@@ -85,9 +84,12 @@
     </main>
 
     <footer>
-        <p>Site conçu par les devs Poulet of WildCity</p>
-        <p>Projet 1</p>
-        <p>A la sueur des pattes</p>
+        <p>Wild City, la ville où les poules dansent et chantent ! 🐔✨</p>
+
+        <p>&copy; 2024 Wild City. Tous droits réservés.
+            <a href="#">Mentions légales</a> | <a href="#">CGU</a>
+        </p>
+
     </footer>
 
 
