--- a/gastronomie/gastronomie.html
+++ b/gastronomie/gastronomie.html
@@ -177,9 +177,12 @@
         <script src="gastronomie.js" defer></script>
     </main>
     <footer>
-        <p>Site conçu par les devs Poulet of WildCity</p>
-        <p>Projet 1</p>
-        <p>A la sueur des pattes</p>
+        <p>Wild City, la ville où les poules dansent et chantent ! 🐔✨</p>
+
+        <p>&copy; 2024 Wild City. Tous droits réservés.
+            <a href="#">Mentions légales</a> | <a href="#">CGU</a>
+        </p>
+
     </footer>
 </body>
 
