--- a/loisir.html
+++ b/loisir.html
@@ -14,11 +14,11 @@
         <nav>
             <p><a href="index.html"></a></p>
             <ul>
-                <li><a href="test.html" class="default">🏠</a></li>
-                <li><a href="test.html">Gastronomie</a></li>
-                <li><a href="">Loisirs</a></li>
-                <li><a href="">Cultures</a></li>
-                <li><a href="">News</a></li>
+                <li><a href="index.html" class="default">🏠</a></li>
+                <li><a href="gastronomie/gastronomie.html">Gastronomie</a></li>
+                <li><a href="loisir.html">Loisirs</a></li>
+                <li><a href="cultures.html">Cultures</a></li>
+                <li><a href="news.html">News</a></li>
                 <!-- <li><a href="" class="search-icon-i">🏠</a></li> -->
             </ul>
             <div class="search-container">
@@ -188,9 +188,14 @@
         <div class="test2"><button class="next" aria-label="Suivant">&gt;</button></div>
     </div>
 
-
+    <footer>
+        <p>Wild City, la ville où les poules dansent et chantent ! 🐔✨</p>
+        <p>&copy; 2024 Wild City. Tous droits réservés.
+        </p>
+    </footer>
 
     <script src="loisir.js"></script>
+
 </body>
 
 </html>
