--- a/big-article.html
+++ b/big-article.html
@@ -5,11 +5,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Big article</title>
-    <link rel="stylesheet" href="big-article.css">
+    <link rel="stylesheet" href="grand-article.css">
 </head>
 
 <body>
+    <header>
+        <img class="modèle" src="./Img/Newspaper.png" alt="Image Parade">
+    </header>
+    <article>
+        <h1>Réelection du Maire</h1>
+        <div class="content">
+            <div>
+                <img src="./Img/Maire de wildcity.webp" alt="image mayor">
+                <p>Dans la vibrante et colorée Wild City, une ville où les poules vivent en harmonie et en société comme
+                    des humains, le grand jour tant attendu est enfin arrivé : la réélection de leur cher Maire Plumet.
+                    Ce majestueux poulet, avec son plumage doré et sa personnalité charismatique, a su conquérir le cœur
+                    de tous les citoyens de cette métropole avicole. <br>
+                    Le jour du vote, l'excitation était palpable. Les poules, en robes colorées et chapeaux ornés de
+                    plumes, se pressaient devant les urnes, prêtes à exprimer leur voix. Les enfants, perchés sur les
+                    épaules de leurs parents, agitaient des drapeaux en papier représentant leur candidat favori. Dans
+                    l'air flottait une odeur délicieuse.
+                </p>
 
+            </div>
+            <p>Après une journée de vote intense, le moment tant attendu de l'annonce des résultats était enfin arrivé.
+                Maire Plumet, entouré de ses conseillers et de ses fidèles partisans, attendait avec impatience. Lorsque
+                le responsable des élections, un vieux coq sage, annonça les résultats, une ovation tonitruante éclata :
+                Maire Plumet avait été réélu avec une majorité écrasante !
+
+                Les cris de joie résonnaient à travers Wild City. Les poules dansaient, picoraient et festoyaient pour
+                célébrer cette victoire. Maire Plumet, ému, prit la parole pour remercier ses concitoyens. « Je suis
+                honoré de votre confiance ! Ensemble, nous continuerons à faire de Wild City un endroit où il fait bon
+                vivre, chanter et picorer. »
+
+                Les célébrations se poursuivirent toute la nuit, avec des feux d'artifice en forme de grains de maïs
+                illuminant le ciel. Les poules de Wild City savaient qu'avec Maire Plumet à leur tête, l'avenir de leur
+                chère ville serait brillant et plein de promesses.
+
+                Ainsi, une nouvelle ère commençait pour Wild City, sous la gouvernance d'un maire qui, malgré son
+                apparence de grand poulet, avait un cœur encore plus grand.
+
+
+
+
+
+            </p>
+        </div>
+    </article>
+    <footer>
+        <p>Wild City, la ville où les poules dansent et chantent ! 🐔✨</p>
+
+        <p>&copy; 2024 Wild City. Tous droits réservés.
+            <a href="#">Mentions légales</a> | <a href="#">CGU</a>
+        </p>
+    </footer>
 </body>
 
 </html>
