--- a/grand-article.html
+++ b/grand-article.html
@@ -12,19 +12,67 @@
     <header>
         <img class="modèle" src="./Img/Carnaval poulette.png " alt="Image Parade">
     </header>
-    <h1>Parade des poulettes</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore nihil, facere officiis pariatur quas eius ipsum
-        in assumenda! Porro tenetur provident mollitia rem eos omnis sunt ipsa, est itaque doloribus ducimus blanditiis
-        autem laudantium alias perspiciatis nihil fugiat? Placeat at quasi culpa numquam consequuntur odio, non
-        voluptate dolor id officiis voluptatem obcaecati eos dolorem quis ipsam autem qui labore delectus sed nostrum.
-        Ab minus vero at, facilis facere, nisi quam dolorum sequi consectetur quia incidunt culpa placeat quo inventore
-        nesciunt. Esse sequi deleniti, doloribus rem sed consequatur ipsa quia quae dolores eveniet rerum magni nobis
-        repellendus aliquid veniam sint quas modi culpa corrupti iste, autem iusto, impedit quo aliquam? Saepe, soluta
-        cumque sequi repellendus aspernatur id voluptatibus qui velit maxime reiciendis itaque! Itaque necessitatibus
-        consequatur nesciunt sunt asperiores facilis officiis consequuntur ratione consectetur? Nisi consequatur
-        praesentium minima lzaboriosam veritatis debitis, consequuntur perspiciatis, tempora, similique doloribus
-        voluptates quae ad cupiditate cum?</p>
+    <article>
+        <h1>Parade des poulettes</h1>
+        <div class="content">
+            <div>
+                <img src="./Img/Carnaval.png" alt="image carnaval">
+                <p>Dans la ville imaginaire de Wild City, où les rues vibrent au rythme des battements d’ailes et des
+                    caquètements joyeux, chaque année, un événement flamboyant attire tous les regards : le défilé des
+                    poulettes. Ce carnaval, célébré avec ferveur par les habitants de cette cité peuplée de poulets, est
+                    l’occasion pour les jeunes poules de dévoiler leur personnalité pétillante et leur sens du style.
+                    <br>
+                    Les préparatifs commencent des semaines à l’avance. Les poulettes, parées de plumes colorées et de
+                    costumes extravagants, se retrouvent dans le parc central pour des répétitions énergiques. Certaines
+                    optent pour des robes en sequins scintillants, tandis que d’autres préfèrent des ensembles plus
+                    audacieux, ornés de fleurs en papier crépon. Les rires et les caquètements s’élèvent alors que
+                    chacune tente d’impressionner le jury, composé de poules et de coqs influents de Wild City.
+                    Le jour du défilé, la ville est en émoi. Les pavés étincellent sous le soleil, et les habitants,
+                    impatients, se rassemblent le long des rues pavées, tenant des banderoles et agitant des plumes
+                    multicolores.Le jour du défilé, la ville est en émoi. Les pavés étincellent sous le soleil, et les
+                    habitants,
+                    impatients, se rassemblent le long des rues pavées, tenant des banderoles et agitant des plumes
+                    multicolores. Des fanfares de coqs en costume jouent des mélodies entraînantes, créant une
+                    atmosphère
+                    festive.
 
+
+                </p>
+
+            </div>
+            <p> Les poulettes, tout droit sorties de leurs coulisses, s’avancent avec assurance sur le grand
+                podium, leurs plumes brillantes captant la lumière du jour.
+
+                Le défilé commence par une chorégraphie élaborée, où les poulettes se déplacent en synchronisation,
+                mimant des pas de danse inspirés des plus grands ballets. Elles se pavanent, les ailes déployées, avec
+                des mouvements gracieux qui feraient rougir d’envie les plus grands danseurs humains. Chaque poulette a
+                son moment de gloire, se retournant et lançant des regards charmeurs au public, qui est en délire.
+
+                Au fil du défilé, les poulettes montrent non seulement leur sens du style, mais aussi leur talent pour
+                le théâtre. Certaines racontent des histoires drôles, tandis que d’autres interprètent des scènes
+                comiques, faisant rire aux éclats les spectateurs. Leurs comportements humains, leur capacité à
+                s’exprimer avec tant de passion et d’émotion, font de ce défilé un spectacle inoubliable.
+
+                À la fin de la parade, le jury annonce les gagnantes des différents prix : la plus belle costume, la
+                meilleure chorégraphie, et le prix du public. Les applaudissements résonnent dans toute la ville alors
+                que les poulettes, rayonnantes de fierté, montent sur le podium pour recevoir leur récompense.
+
+                Le défilé des poulettes à Wild City est bien plus qu’un simple événement ; c’est une célébration de la
+                créativité, de l’amitié et de la joie de vivre. Alors que le soleil se couche sur cette journée
+                mémorable, les habitants de Wild City se promettent de revenir l’année prochaine, impatients de
+                découvrir les nouvelles prouesses de leurs poulettes adorées.
+
+
+            </p>
+        </div>
+    </article>
+    <footer>
+        <p>Wild City, la ville où les poules dansent et chantent ! 🐔✨</p>
+
+        <p>&copy; 2024 Wild City. Tous droits réservés.
+            <a href="#">Mentions légales</a> | <a href="#">CGU</a>
+        </p>
+    </footer>
 </body>
 
 </html>
