--- a/news.html
+++ b/news.html
@@ -15,11 +15,11 @@
             <nav>
                 <p><a href="index.html"></a></p>
                 <ul>
-                    <li><a href="index.html" class="default">🏠</a></li>
+                    <li><a href="./index.html" class="default">🏠</a></li>
                     <li><a href="Gastronomie.html">Gastronomie</a></li>
                     <li><a href="Loisirs.html">Loisirs</a></li>
-                    <li><a href="cultures.html">Cultures</a></li>
-                    <li><a href="news.html">News</a></li>
+                    <li><a href="./cultures.html">Cultures</a></li>
+                    <li><a href="./news.html">News</a></li>
                     <!-- <li><a href="" class="search-icon-i">🏠</a></li> -->
                 </ul>
                 <div class="search-container">
@@ -29,7 +29,10 @@
 
     </header>
     <main>
+
+
         <h2>News</h2>
+
         <section class="conteneur">
             <article>
                 <img class="modèle" src="./Img/Carnaval poulette.png " alt="Image Parade">
@@ -40,7 +43,8 @@
                         et quelques grattes-ciel ébahis ! Les habitantes ont défilé
                         en robe plumes et en escarpins en grains de maïs.
                     </p>
-                    <a href="grand-article" style="color:darkgoldenrod" target="_blank">Lire l'article complet</a>
+                    <a href="grand-article.html" style="color:darkgoldenrod" target="_blank">Lire l'article
+                        complet</a>
 
                 </div>
             </article>
@@ -59,7 +63,8 @@
                         des œufs en chocolat.Le poulet, fier de son succès, promet d'
                         augmenter le budget de la foire annuelle.
                     </p>
-                    <a href="big-article" style="color:darkgoldenrod" class="read-again">Lire l'article complet</a>
+                    <a href="big-article.html" style="color:darkgoldenrod" class="read-again">Lire l'article
+                        complet</a>
                 </div>
             </article>
 
@@ -114,7 +119,14 @@
             </article>
         </section>
     </main>
-    <footer></footer>
+
+    <footer>
+        <p>Wild City, la ville où les poules dansent et chantent ! 🐔✨</p>
+
+        <p>&copy; 2024 Wild City. Tous droits réservés.
+            <a href="#">Mentions légales</a> | <a href="#">CGU</a>
+        </p>
+    </footer>
     <script src="news.js"></script>
 </body>
 
