--- a/gastronomie/gastronomie.html
+++ b/gastronomie/gastronomie.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="/index.html" class="default">🏠</a></li>
                 <li><a href="/gastronomie/gastronomie.html">Gastronomie</a></li>
-                <li><a href="">Loisirs</a></li>
+                <li><a href="loisirs">Loisirs</a></li>
                 <li><a href="/cultures.html">Cultures</a></li>
                 <li><a href="/news.html">News</a></li>
             </ul>
