--- a/cultures.html
+++ b/cultures.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <meta name="page culture wild-city" content="evenement culturel cinema musique"> -->
     <link rel="stylesheet" href="culture.css">
+    <link rel="shortcut icon" href="./assets/images/ico/Designer2-removebg-preview.ico" type="image/x-icon">
     <title>page-cultures</title>
 </head>
 
@@ -42,7 +43,7 @@
     <main>
         <!-- frist section cinema -->
         <article>
-            <div class="title1">
+            <div class="title">
                 <h2>Cinéma</h2>
             </div>
             <section class="one">
@@ -91,11 +92,11 @@
         </article>
         <!-- deuxieme partie -->
         <article>
-            <div class="title2">
+            <div class="title">
                 <h2>Théâtre</h2>
             </div>
             <section class="two">
-                <img src="./images/theatre.webp" alt="salle de theatre" class="image">
+                <img src="./images/R&C.png" alt="salle de theatre" class="image">
                 <div>
                     <h3>Roméo et Coqulettes</h3>
                     <p>
@@ -136,11 +137,10 @@
         </article>
     </main>
     <footer>
+        <img src="./assets/images/ico/Designer2-removebg-preview.ico" alt="logo">
         <p>Wild City, la ville où les poules dansent et chantent ! 🐔✨</p>
-
         <p>&copy; 2024 Wild City. Tous droits réservés.
         </p>
-        
     </footer>
     <script src="culture.js" defer></script>
 </body>
